factus-docs/v1/tablas-de-referencia/tablas.md
# Tablas

Este contenido es para V1. Cambia a la [versión más reciente](https://developers.factus.com.co/) para ver la documentación actualizada.

### Tablas de referencia para la implementación de la Factura Electrónica en Colombia

[Sección titulada «Tablas de referencia para la implementación de la Factura Electrónica en Colombia»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#tablas-de-referencia-para-la-implementaci%C3%B3n-de-la-factura-electr%C3%B3nica-en-colombia)

* * *

#### Códigos de tipos de documentos para la factura

[Sección titulada «Códigos de tipos de documentos para la factura»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documentos-para-la-factura)

| **Código** | **Descripción** |
| --- | --- |
| `01` | Factura electrónica de venta. |
| `03` | Instrumento electrónico de transmisión - tipo 03. |

#### Códigos de tipos de operación

[Sección titulada «Códigos de tipos de operación»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-operaci%C3%B3n)

| **Código** | **Descripción** |
| --- | --- |
| `10` | Estándar. |
| `11` | Mandatos. |
| `12` | Transporte. |

#### Códigos de corrección

[Sección titulada «Códigos de corrección»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-correcci%C3%B3n)

| **Código** | **Descripción** |
| --- | --- |
| `1` | Devolución parcial de los bienes y/o no aceptación parcial del servicio. |
| `2` | Anulación de factura electrónica. |
| `3` | Rebaja o descuento parcial o total. |
| `4` | Ajuste de precio. |
| `5` | Descuento comercial por pronto pago. |
| `6` | Descuento comercial por volumen de ventas. |

#### Códigos de tipos de operación (notas crédito)

[Sección titulada «Códigos de tipos de operación (notas crédito)»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-operaci%C3%B3n-notas-cr%C3%A9dito)

| **Código** | **Descripción** |
| --- | --- |
| `20` | Nota Crédito que referencia una factura electrónica. |
| `22` | Nota Crédito sin referencia a una factura electrónica. |

#### IDs de estándar de identificación del producto

[Sección titulada «IDs de estándar de identificación del producto»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#ids-de-est%C3%A1ndar-de-identificaci%C3%B3n-del-producto)

| **ID** | **Nombre** |
| --- | --- |
| `1` | Estándar de adopción del contribuyente |
| `2` | UNSPSC |
| `3` | Partida Arancelaria |
| `4` | GTIN |

#### Códigos de conceptos de reclamo

[Sección titulada «Códigos de conceptos de reclamo»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-conceptos-de-reclamo)

| **Código** | **Nombre** |
| --- | --- |
| `01` | Documento con inconsistencias |
| `02` | Mercancía no entregada totalmente |
| `03` | Mercancía no entregada parcialmente |
| `04` | Servicio no prestado |

#### Códigos de eventos

[Sección titulada «Códigos de eventos»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-eventos)

| **Código** | **Nombre** |
| --- | --- |
| `030` | Acuse de recibo de Factura Electrónica de Venta |
| `031` | Reclamo de la Factura Electrónica de Venta |
| `032` | Recibo del bien y/o prestación del servicio |
| `033` | Aceptación expresa |
| `034` | Aceptación tácita |

#### IDs de tipos de documentos de identidad

[Sección titulada «IDs de tipos de documentos de identidad»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#ids-de-tipos-de-documentos-de-identidad)

| **ID** | **Nombre** |
| --- | --- |
| `1` | Registro civil |
| `2` | Tarjeta de identidad |
| `3` | Cédula de ciudadanía |
| `4` | Tarjeta de extranjería |
| `5` | Cédula de extranjería |
| `6` | NIT |
| `7` | Pasaporte |
| `8` | Documento de identificación extranjero |
| `9` | PEP |
| `10` | NIT otro país |
| `11` | NUIP\* |

#### IDs de tributos clientes

[Sección titulada «IDs de tributos clientes»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#ids-de-tributos-clientes)

| **ID** | **Código** | **Nombre** |
| --- | --- | --- |
| `18` | `01` | IVA |
| `21` | `ZZ` | No aplica \* |

#### IDs de tipos de organizaciones

[Sección titulada «IDs de tipos de organizaciones»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#ids-de-tipos-de-organizaciones)

| **ID** | **Nombre** |
| --- | --- |
| `1` | Persona Jurídica |
| `2` | Persona Natural |

#### Códigos de métodos de pago

[Sección titulada «Códigos de métodos de pago»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-m%C3%A9todos-de-pago)

| **Código** | **Nombre** |
| --- | --- |
| `10` | Efectivo |
| `42` | Consignación |
| `20` | Cheque |
| `47` | Transferencia |
| `71` | Bonos |
| `72` | Vales |
| `1` | Medio de pago no definido |
| `49` | Tarjeta Débito |
| `48` | Tarjeta Crédito |
| `ZZZ` | Otro\* |

#### Códigos de formas de pago

[Sección titulada «Códigos de formas de pago»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-formas-de-pago)

| **Código** | **Nombre** |
| --- | --- |
| `1` | Pago de contado |
| `2` | Pago a crédito |

#### Códigos de tipos de documento para los rangos de numeración

[Sección titulada «Códigos de tipos de documento para los rangos de numeración»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documento-para-los-rangos-de-numeraci%C3%B3n)

| **Código** | **Descripción** |
| --- | --- |
| `21` | Factura de Venta |
| `22` | Nota Crédito |
| `23` | Nota Débito |
| `24` | Documento Soporte |
| `25` | Nota de Ajuste Documento Soporte |
| `26` | Nómina |
| `27` | Nota de Ajuste Nómina |
| `28` | Nota de eliminación de nómina |
| `30` | Factura de talonario y de papel |

#### IDs de tipos de documentos de identidad para Documentos Soporte y Notas de ajuste

[Sección titulada «IDs de tipos de documentos de identidad para Documentos Soporte y Notas de ajuste»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#ids-de-tipos-de-documentos-de-identidad-para-documentos-soporte-y-notas-de-ajuste)

| **ID** | **Nombre** |
| --- | --- |
| `4` | Tarjeta de extranjería |
| `5` | Cédula de extranjería |
| `6` | NIT |
| `7` | Pasaporte |
| `8` | Documento de identificación extranjero |
| `9` | PEP |
| `10` | NIT otro país |

#### Motivos para la generación de Notas de Ajuste

[Sección titulada «Motivos para la generación de Notas de Ajuste»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#motivos-para-la-generaci%C3%B3n-de-notas-de-ajuste)

| **Código** | **Descripción** |
| --- | --- |
| `1` | Devolución parcial de los bienes y/o no aceptación parcial del servicio |
| `2` | Anulación del documento soporte en adquisiciones efectuadas a sujetos no obligados a expedir factura de venta o documento equivalente |
| `3` | Rebaja o descuento parcial o total |
| `4` | Ajuste de precio |
| `5` | Otros |

#### Códigos de los recargos y descuentos

[Sección titulada «Códigos de los recargos y descuentos»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#c%C3%B3digos-de-los-recargos-y-descuentos)

| **Código** | **Descripción** |
| --- | --- |
| ~`00`~ | ~Descuento no condicionado~ (disponible próximamente) |
| ~`01`~ | ~Descuento condicionado~ (disponible próximamente) |
| ~`02`~ | ~Recargo no condicionado~ (disponible próximamente) |
| `03` | Recargo condicionado |

#### Responsabilidades fiscales

[Sección titulada «Responsabilidades fiscales»](https://developers.factus.com.co/v1/tablas-de-referencia/tablas#responsabilidades-fiscales)

| **Código** | **Descripción** |
| --- | --- |
| `O-13` | Gran contribuyente |
| `0-15` | Autorretenedor |
| `0-23` | Agente de retención de IVA |
| `0-47` | Régimen simple de tributación |
| `R-99-PN` | No responsable |
