factus-docs/v2/tablas-de-referencia/tablas.md
# Tablas

### Tablas de referencia para la implementación de la Factura Electrónica en Colombia

[Sección titulada «Tablas de referencia para la implementación de la Factura Electrónica en Colombia»](https://developers.factus.com.co/tablas-de-referencia/tablas#tablas-de-referencia-para-la-implementaci%C3%B3n-de-la-factura-electr%C3%B3nica-en-colombia)

* * *

#### Códigos de tipos de documentos para la factura

[Sección titulada «Códigos de tipos de documentos para la factura»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documentos-para-la-factura)

| **Código** | **Descripción** |
| --- | --- |
| `01` | Factura electrónica de venta. |
| `03` | Instrumento electrónico de transmisión - tipo 03. |

#### Códigos de tipos de operación

[Sección titulada «Códigos de tipos de operación»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-operaci%C3%B3n)

| **Código** | **Descripción** |
| --- | --- |
| `10` | Estándar. |
| `11` | Mandatos. |
| `12` | Transporte. |
| `SS-CUFE` | Sector Salud - CUFE. |
| `SS-Reporte` | Sector Salud - Reporte. |
| `SS-SinAporte` | Sector Salud - Sin Aporte. |
| `SS-Recaudo` | Sector Salud - Recaudo de cuotas moderadoras o copagos. |

#### Códigos de corrección (notas crédito)

[Sección titulada «Códigos de corrección (notas crédito)»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-correcci%C3%B3n-notas-cr%C3%A9dito)

| **Código** | **Descripción** |
| --- | --- |
| `1` | Devolución parcial de los bienes y/o no aceptación parcial del servicio. |
| `2` | Anulación de factura electrónica. |
| `3` | Rebaja o descuento parcial o total. |
| `4` | Ajuste de precio. |
| `5` | Descuento comercial por pronto pago. |
| `6` | Descuento comercial por volumen de ventas. |

#### Códigos de tipos de operación (notas crédito)

[Sección titulada «Códigos de tipos de operación (notas crédito)»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-operaci%C3%B3n-notas-cr%C3%A9dito)

| **Código** | **Descripción** |
| --- | --- |
| `20` | Nota Crédito que referencia una factura electrónica. |
| `22` | Nota Crédito sin referencia a una factura electrónica. |

#### Códigos de corrección (notas débito)

[Sección titulada «Códigos de corrección (notas débito)»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-correcci%C3%B3n-notas-d%C3%A9bito)

| **Código** | **Descripción** |
| --- | --- |
| `1` | Intereses. |
| `2` | Gastos por cobrar. |
| `3` | Cambio del valor. |
| `4` | Otros. |

#### Códigos de tipos de operación (notas débito)

[Sección titulada «Códigos de tipos de operación (notas débito)»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-operaci%C3%B3n-notas-d%C3%A9bito)

| **Código** | **Descripción** |
| --- | --- |
| `30` | Nota Débito que referencia una factura electrónica. |
| `32` | Nota Débito sin referencia a una factura electrónica. |

#### Códigos de estándar de identificación del producto

[Sección titulada «Códigos de estándar de identificación del producto»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-est%C3%A1ndar-de-identificaci%C3%B3n-del-producto)

| **Código** | **Nombre** |
| --- | --- |
| `999` | Estándar de adopción del contribuyente |
| `001` | UNSPSC |
| `020` | Partida Arancelaria |
| `010` | GTIN |

#### Códigos de conceptos de reclamo

[Sección titulada «Códigos de conceptos de reclamo»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-conceptos-de-reclamo)

| **Código** | **Nombre** |
| --- | --- |
| `01` | Documento con inconsistencias |
| `02` | Mercancía no entregada totalmente |
| `03` | Mercancía no entregada parcialmente |
| `04` | Servicio no prestado |

#### Códigos de eventos

[Sección titulada «Códigos de eventos»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-eventos)

| **Código** | **Nombre** |
| --- | --- |
| `030` | Acuse de recibo de Factura Electrónica de Venta |
| `031` | Reclamo de la Factura Electrónica de Venta |
| `032` | Recibo del bien y/o prestación del servicio |
| `033` | Aceptación expresa |
| `034` | Aceptación tácita |

#### Códigos de tipos de documentos de identidad

[Sección titulada «Códigos de tipos de documentos de identidad»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documentos-de-identidad)

| **Código** | **Nombre** |
| --- | --- |
| `11` | Registro civil |
| `12` | Tarjeta de identidad |
| `13` | Cédula de ciudadanía |
| `21` | Tarjeta de extranjería |
| `22` | Cédula de extranjería |
| `31` | NIT |
| `41` | Pasaporte |
| `42` | Documento de identificación extranjero |
| `47` | PEP |
| `48` | PPT (Permiso Protección Temporal) |
| `50` | NIT otro país |
| `91` | NUIP\* |

#### Códigos de tributos clientes

[Sección titulada «Códigos de tributos clientes»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tributos-clientes)

| **Código** | **Nombre** |
| --- | --- |
| `01` | IVA |
| `ZZ` | No aplica \* |

#### Códigos de impuestos

[Sección titulada «Códigos de impuestos»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-impuestos)

| **Código** | **Descripción** |
| :-- | :-- |
| `01` | Impuesto sobre la Ventas |
| `04` | Impuesto Nacional al Consumo |
| `35` | Impuesto a los productos comestibles ultraprocesados industrialmente y/o con alto contenido de azúcares añadidos, sodio o grasas saturadas |

* * *

#### Códigos de retenciones

[Sección titulada «Códigos de retenciones»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-retenciones)

| **Código** | **Descripción** |
| :-- | :-- |
| `05` | Retención sobre el IVA |
| `06` | Retención sobre renta |

* * *

#### Código de tipos de organizaciones

[Sección titulada «Código de tipos de organizaciones»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digo-de-tipos-de-organizaciones)

| **Código** | **Nombre** |
| --- | --- |
| `1` | Persona Jurídica |
| `2` | Persona Natural |

#### Códigos de métodos de pago

[Sección titulada «Códigos de métodos de pago»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-m%C3%A9todos-de-pago)

| **Código** | **Nombre** |
| --- | --- |
| `10` | Efectivo |
| `42` | Consignación |
| `20` | Cheque |
| `47` | Transferencia |
| `71` | Bonos |
| `72` | Vales |
| `1` | Medio de pago no definido |
| `49` | Tarjeta Débito |
| `48` | Tarjeta Crédito |
| `ZZZ` | Otro\* |

#### Códigos de formas de pago

[Sección titulada «Códigos de formas de pago»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-formas-de-pago)

| **Código** | **Nombre** |
| --- | --- |
| `1` | Pago de contado |
| `2` | Pago a crédito |

#### Códigos de tipos de documento para los rangos de numeración

[Sección titulada «Códigos de tipos de documento para los rangos de numeración»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documento-para-los-rangos-de-numeraci%C3%B3n)

| **Código** | **Descripción** |
| --- | --- |
| `21` | Factura de Venta |
| `22` | Nota Crédito |
| `23` | Nota Débito |
| `24` | Documento Soporte |
| `25` | Nota de Ajuste Documento Soporte |
| `30` | Factura de talonario y de papel |

#### Códigos de tipos de documento para los rangos de numeración nómina

[Sección titulada «Códigos de tipos de documento para los rangos de numeración nómina»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documento-para-los-rangos-de-numeraci%C3%B3n-n%C3%B3mina)

| **Código** | **Descripción** |
| --- | --- |
| `26` | Nómina Electrónica |
| `27` | Nota de ajuste Nómina Electrónica |

#### Códigos de tipos de documentos de identidad para Documentos Soporte y Notas de ajuste

[Sección titulada «Códigos de tipos de documentos de identidad para Documentos Soporte y Notas de ajuste»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-tipos-de-documentos-de-identidad-para-documentos-soporte-y-notas-de-ajuste)

| **Código** | **Nombre** |
| --- | --- |
| `21` | Tarjeta de extranjería |
| `22` | Cédula de extranjería |
| `31` | NIT |
| `41` | Pasaporte |
| `42` | Documento de identificación extranjero |
| `47` | PEP |
| `50` | NIT otro país |

#### Motivos para la generación de Notas de Ajuste

[Sección titulada «Motivos para la generación de Notas de Ajuste»](https://developers.factus.com.co/tablas-de-referencia/tablas#motivos-para-la-generaci%C3%B3n-de-notas-de-ajuste)

| **Código** | **Descripción** |
| --- | --- |
| `1` | Devolución parcial de los bienes y/o no aceptación parcial del servicio |
| `2` | Anulación del documento soporte en adquisiciones efectuadas a sujetos no obligados a expedir factura de venta o documento equivalente |
| `3` | Rebaja o descuento parcial o total |
| `4` | Ajuste de precio |
| `5` | Otros |

#### Códigos de los recargos y descuentos

[Sección titulada «Códigos de los recargos y descuentos»](https://developers.factus.com.co/tablas-de-referencia/tablas#c%C3%B3digos-de-los-recargos-y-descuentos)

| **Código** | **Descripción** |
| --- | --- |
| ~`00`~ | ~Descuento no condicionado~ (disponible próximamente) |
| ~`01`~ | ~Descuento condicionado~ (disponible próximamente) |
| ~`02`~ | ~Recargo no condicionado~ (disponible próximamente) |
| `03` | Recargo condicionado |

#### Responsabilidades fiscales

[Sección titulada «Responsabilidades fiscales»](https://developers.factus.com.co/tablas-de-referencia/tablas#responsabilidades-fiscales)

| **Código** | **Descripción** |
| --- | --- |
| `O-13` | Gran contribuyente |
| `O-15` | Autorretenedor |
| `O-23` | Agente de retención de IVA |
| `O-47` | Régimen simple de tributación |
| `R-99-PN` | No responsable |

### Sector Salud

[Sección titulada «Sector Salud»](https://developers.factus.com.co/tablas-de-referencia/tablas#sector-salud)

#### Planes de cobertura en salud

[Sección titulada «Planes de cobertura en salud»](https://developers.factus.com.co/tablas-de-referencia/tablas#planes-de-cobertura-en-salud)

| **Código** | **Nombre** |
| --- | --- |
| `01` | Plan de beneficios en salud financiado con UPC |
| `02` | Presupuesto máximo |
| `03` | Prima EPS / EOC, no asegurados SOAT |
| `04` | Cobertura Póliza SOAT |
| `05` | Cobertura ARL |
| `06` | Cobertura ADRES |
| `07` | Cobertura Salud Pública |
| `08` | Cobertura entidad territorial, recursos de oferta |
| `09` | Urgencias población migrante |
| `10` | Plan complementario en salud |
| `11` | Plan medicina prepagada |
| `12` | Otras pólizas en salud |
| `13` | Cobertura Régimen Especial o Excepción |
| `14` | Cobertura Fondo Nacional de Salud de las Personas Privadas de la Libertad |
| `15` | Particular |
| `16` | Plan de beneficios en salud financiado con UPC régimen contributivo |
| `17` | Plan de beneficios en salud financiado con UPC régimen subsidiado |

#### Documentos de identificacion para sector salud

[Sección titulada «Documentos de identificacion para sector salud»](https://developers.factus.com.co/tablas-de-referencia/tablas#documentos-de-identificacion-para-sector-salud)

| **Código** | **Nombre** |
| --- | --- |
| `CC` | Cédula de ciudadanía |
| `CE` | Cédula de extranjería |
| `CD` | Carné diplomático |
| `PA` | Pasaporte |
| `SC` | Salvoconducto |
| `PE` | Permiso especial de permanencia |
| `RC` | Registro civil de nacimiento |
| `TI` | Tarjeta de identidad |
| `CN` | Certificado de nacido vivo |
| `AS` | Adulto sin identificar |
| `MS` | Menor sin identificar |
| `DE` | Documento extranjero |
| `SI` | Sin identificación |
| `PT` | Permiso por protección temporal |

#### Metodos de pago en salud

[Sección titulada «Metodos de pago en salud»](https://developers.factus.com.co/tablas-de-referencia/tablas#metodos-de-pago-en-salud)

| **Código** | **Nombre** |
| --- | --- |
| `01` | Paquete / Canasta / Conjunto Integral en Salud |
| `02` | Grupos Relacionados por Diagnóstico |
| `03` | Integral por grupo de riesgo |
| `04` | Pago por contacto por especialidad |
| `05` | Pago por escenario de atención |
| `06` | Pago por tipo de servicio |
| `07` | Pago global prospectivo por episodio |
| `08` | Pago global prospectivo por grupo de riesgo |
| `09` | Pago global prospectivo por especialidad |
| `10` | Pago global prospectivo por nivel de complejidad |
| `11` | Capitación |
| `12` | Por servicio |

#### Conceptos de anticipo o recaudo previo en salud

[Sección titulada «Conceptos de anticipo o recaudo previo en salud»](https://developers.factus.com.co/tablas-de-referencia/tablas#conceptos-de-anticipo-o-recaudo-previo-en-salud)

| **Código** | **Nombre** |
| --- | --- |
| `01` | Copago |
| `02` | Cuota moderadora |
| `03` | Pagos compartidos en planes voluntarios de salud |
| `04` | Anticipo |
| `05` | No aplica |
